Add updates page

--- a/predicaments/The Predicament Landscape.html
+++ b/predicaments/The Predicament Landscape.html
@@ -6,7 +6,7 @@
 <h1>The Predicament Landscape</h1>
 
 <h2>An Ecophilosopoetic Attempt at Sense-Making</h2>
-
+<a href="updates.html">Updates</a>
 <p><strong>What is the point of this?</strong><br>
 
 All around, people are looking to act and <em>do something</em>. Often their eagerness to act, perhaps understandably so, outpaces their wisdom in choice of action. Don't get me wrong, we are in a hurry, in fact, we're too late, way too late. But one of the reasons for being late is that most attempted solutions have pushed us further down the same tracks we're eager to leave behind. The problem is that there isn't any singular problem. There are many, infinitely many, and we won't <em>solve</em> them. If we don't know where we are or where we are going it does not matter how fast we're moving. This landscape was mapped with that question in mind, namely, what is the problem? What are the problems of modernity? Are they even problems to begin with?</p>
