--- a/predicaments/updates.html
+++ b/predicaments/updates.html
@@ -5,6 +5,8 @@
 <title>Updates</title>
 <h2>Updates</h2>
 <a href="The Predicament Landscape.html">Back</a>
+<h3>2024-08-16</h3>
+<p>Bulk edit all (most?) predicaments.</p>
 <h3>2024-08-14</h3>
 <p>Fixed the styling for predicaments 1-10 and added this Updates page.</p>
 <h3>2024-08-13</h3>
