Fix List of Possibilities

--- a/predicaments/List of possibilities.html
+++ b/predicaments/List of possibilities.html
@@ -1,210 +1,207 @@
-<!DOCTYPE html> <html><head>
+<!DOCTYPE html> <html>
+	<head>
+		<link rel="stylesheet" href="../css/styles.css">
+		</head>
 		<title>List of possibilities</title>
-		
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-</head>
-<h2></h2><cite>Cultural binding</li>
-<cite>Legal binding</li>
-<cite>Cultural control systems</li>
-<cite>Regenerative agriculture</li>
-<cite>Permaculture</li>
-<cite>Jazz</li>
-<cite>Punk</li>
-<cite>Improvisation</li>
-<cite>Low tech</li>
-<cite>Solar power</li>
-<cite>Wisdom traditions</li>
-<cite>Eightfold path</li>
-<cite>Complexity</li>
-<cite>Meditation</li>
-<cite>Universal basic income</li>
-<cite>Poetry</li>
-<cite>Myths</li>
-<cite>Bicycles</li>
-<cite>Public transport</li>
-<cite>Rituals</li>
-<cite>Systems thinking</li>
-<cite>Degrowth</li>
-<cite>Controlled descent</li>
-<cite>Profitless economy</li>
-<cite>Fermentation</li>
-<cite>Cooking</li>
-<cite>Voluntary simplicity</li>
-<cite>Future visions</li>
-<cite>Solarpunk</li>
-<cite>Acceptance</li>
-<cite>Courage</li>
-<cite>Ingenuity</li>
-<cite>Anarchism</li>
-<cite>Trust</li>
-<cite>Collective action</li>
-<cite>Learning</li>
-<cite>Lean logic</li>
-<cite>Zen</li>
-<cite>Tao</li>
-<cite>Imagination</li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-</head>
-<h2></h2><cite>Silence</li>
-<cite>Time</li>
-<cite>Slowness</li>
-<cite>Unproductivity</li>
-<cite>Staying with uncertainty</li>
-<cite>Pragmatism</li>
-<cite>Alchemy</li>
-<cite>Art</li>
-<cite>Foraging</li>
-<cite>Trains</li>
-<cite>Darkness</li>
-<cite>Rewilding</li>
-<cite>Local communities</li>
-<cite>Concentration</li>
-<cite>Thinking</li>
-<cite>Empathy</li>
-<cite>Genesis</li>
-<cite>Animism</li>
-<cite>Holism</li>
-<cite>Respect</li>
-<cite>Being lost</li>
-<cite>Karma</li>
-<cite>Balance</li>
-<cite>Science</li>
-<cite>Reasoning</li>
-<cite>Analogue</li>
-<cite>Paradox</li>
-<cite>Broad boundary progress</li>
-<cite>Self-sufficiency</li>
-<cite>Work</li>
-<cite>Leisure</li>
-<cite>Infinite games</li>
-<cite>Triage</li>
-<cite>Transition</li>
-<cite>Long-term solutions</li>
-<cite>Repair</li>
-<cite>Allowing for recovery</li>
-<cite>Cleaning up</li>
-<cite>Therapy</li>
-<cite>Spirituality</li>
-<cite>Religion</li>
-<cite>Maitreya sangha</li>
-<cite>Craftsmanship</li>
-<cite>Remembering</li>
-<cite>Unlearning</li>
-<cite>Focus</li>
-<cite>Freedom</li>
-<cite>Different wealth</li>
-<cite>Leverage points</li>
-<cite>Values in technology</li>
-<cite>Dialogue</li>
-<cite>Listening</li>
-<cite>Meaning</li>
-<cite>Love</li>
-<cite>Music</li>
-<cite>Attention</li>
-<cite>Burying Moloch</li>
-<cite>Agency</li>
-<cite>Return of the commons</li>
-<cite>Questions</li>
-<cite>The sacred</li>
-<cite>Enthusiasm</li>
-<cite>Exaption</li>
-<cite>Stillness</li>
-<cite>Eternity</li>
-<cite>Infinity</li>
-<cite>Philosophy</li>
-<cite>Ecology</li>
-<cite>Many small things</li>
-<cite>Redistribution</li>
-<cite>Incentives</li>
-<cite>Reduction</li>
-<cite>Reusing</li>
-<cite>Recycling</li>
-<cite>Circular systems</li>
-<cite>Global coordination</li>
-<cite>Remove externalising of harm</li>
-<cite>Internalise benefits</li>
-<cite>Conditions for emergence</li>
-<cite>Plant-based</li>
-<cite>Moderation</li>
-<cite>Diversity</li>
-<cite>Closer to nature</li>
-<cite>Visions of utopia</li>
-<cite>Historical inspiration</li>
-<cite>Carbon capturing</li>
-<cite>Microplastic harvesting</li>
-<cite>Post-collapse optimism</li>
-<cite>Decentralisation</li>
-<cite>Rythms of life</li>
-<cite>DIY</li>
-<cite>Reforestation</li>
-<cite>Something very different</li>
-<cite>Breath</li>
-<cite>Decreasing energy consumption</li>
-<cite>Master over emissary</li>
-<cite>Mysticism</li>
-<cite>Altered states</li>
-<cite>Faith</li>
-<cite>Epistemic humility</li>
-<cite>Humility</li>
-<cite>Open borders</li>
-<cite>Global responsibility</li>
-<cite>Responsibility</li>
-<cite>Healing the water, the earth, the air</li>
-<cite>Wise wielding of power</li>
-<cite>Situationism</li>
-<cite>Reimagining cities, villages, infrastructure</li>
-<cite>Resilience</li>
-<cite>Salvaging the ruins</li>
-<cite>Fungi (svamp, slutet på John Cages Indeterminacy)</li>
-<cite>Biomimicry</li>
-<cite>Avant-garde</li>
-<cite>Bullshit intolerance</li>
-<cite>Merrymaking</li>
-<cite>Grief</li>
-<cite>Technology</li>
-<cite>Fire</li>
-<cite>Resistance</li>
-<cite>Non-violence</li>
-<cite>Leadership</li>
-<cite>Spontaneity</li>
-<cite>Practice</li>
-<cite>Honesty</li>
-<cite>Contemplation</li>
-<cite>Quit your job</li>
-<cite>Let it rot</li>
-<cite>Patience</li>
-<cite>High-touch altruism</li>
-<cite>Everything misses the point</li>
-<cite>Language</li>
-<cite>Impermanence</li>
-<cite>Change</li>
-<cite>Destruction</li>
-<cite>Snap out of it</li>
-<cite>Learn to live on lentils</li>
-<cite>Revitalising the countryside</li>
-<cite>Urban agriculture</li>
-<cite>Swaying seagrass meadows</li>
-<cite>Hospicing Modernity</li>
-<cite>Composting the wonders of humanity</li>
-<cite>Beginner's mind</li>
-<cite>Sourdough</li>
-<cite>Cyberpunk</li>
-<cite>Materialism</li>
-<cite>Alternative economics</li>
-<cite>The Light Triad</li>
-<cite>The world is much larger than we can imagine</li>
-<cite>Reason</li>
-<cite>The Hermetic principles</li>
-<cite>Fika</li>
-<cite>Duality of non-duality</li>
-<cite>Understanding animals and nature</li>
-<cite>Post-complexity simplicity</li>
-<cite>Universality classes</li>
-<cite>Master over the emissary</li>
-<cite>Mind training</li>
-<cite>Small is beautiful</li>
-<cite>Non-doing</li>
-<cite></li>
+		<h2>List of possibilities</h2>
+<ol>
+<li>Cultural binding</li>
+<li>Legal binding</li>
+<li>Cultural control systems</li>
+<li>Regenerative agriculture</li>
+<li>Permaculture</li>
+<li>Jazz</li>
+<li>Punk</li>
+<li>Improvisation</li>
+<li>Low tech</li>
+<li>Solar power</li>
+<li>Wisdom traditions</li>
+<li>Eightfold path</li>
+<li>Complexity</li>
+<li>Meditation</li>
+<li>Universal basic income</li>
+<li>Poetry</li>
+<li>Myths</li>
+<li>Bicycles</li>
+<li>Public transport</li>
+<li>Rituals</li>
+<li>Systems thinking</li>
+<li>Degrowth</li>
+<li>Controlled descent</li>
+<li>Profitless economy</li>
+<li>Fermentation</li>
+<li>Cooking</li>
+<li>Voluntary simplicity</li>
+<li>Future visions</li>
+<li>Solarpunk</li>
+<li>Acceptance</li>
+<li>Courage</li>
+<li>Ingenuity</li>
+<li>Anarchism</li>
+<li>Trust</li>
+<li>Collective action</li>
+<li>Learning</li>
+<li>Lean logic</li>
+<li>Zen</li>
+<li>Tao</li>
+<li>Imagination</li>
+<li>Silence</li>
+<li>Time</li>
+<li>Slowness</li>
+<li>Unproductivity</li>
+<li>Staying with uncertainty</li>
+<li>Pragmatism</li>
+<li>Alchemy</li>
+<li>Art</li>
+<li>Foraging</li>
+<li>Trains</li>
+<li>Darkness</li>
+<li>Rewilding</li>
+<li>Local communities</li>
+<li>Concentration</li>
+<li>Thinking</li>
+<li>Empathy</li>
+<li>Genesis</li>
+<li>Animism</li>
+<li>Holism</li>
+<li>Respect</li>
+<li>Being lost</li>
+<li>Karma</li>
+<li>Balance</li>
+<li>Science</li>
+<li>Reasoning</li>
+<li>Analogue</li>
+<li>Paradox</li>
+<li>Broad boundary progress</li>
+<li>Self-sufficiency</li>
+<li>Work</li>
+<li>Leisure</li>
+<li>Infinite games</li>
+<li>Triage</li>
+<li>Transition</li>
+<li>Long-term solutions</li>
+<li>Repair</li>
+<li>Allowing for recovery</li>
+<li>Cleaning up</li>
+<li>Therapy</li>
+<li>Spirituality</li>
+<li>Religion</li>
+<li>Maitreya sangha</li>
+<li>Craftsmanship</li>
+<li>Remembering</li>
+<li>Unlearning</li>
+<li>Focus</li>
+<li>Freedom</li>
+<li>Different wealth</li>
+<li>Leverage points</li>
+<li>Values in technology</li>
+<li>Dialogue</li>
+<li>Listening</li>
+<li>Meaning</li>
+<li>Love</li>
+<li>Music</li>
+<li>Attention</li>
+<li>Burying Moloch</li>
+<li>Agency</li>
+<li>Return of the commons</li>
+<li>Questions</li>
+<li>The sacred</li>
+<li>Enthusiasm</li>
+<li>Exaption</li>
+<li>Stillness</li>
+<li>Eternity</li>
+<li>Infinity</li>
+<li>Philosophy</li>
+<li>Ecology</li>
+<li>Many small things</li>
+<li>Redistribution</li>
+<li>Incentives</li>
+<li>Reduction</li>
+<li>Reusing</li>
+<li>Recycling</li>
+<li>Circular systems</li>
+<li>Global coordination</li>
+<li>Remove externalising of harm</li>
+<li>Internalise benefits</li>
+<li>Conditions for emergence</li>
+<li>Plant-based</li>
+<li>Moderation</li>
+<li>Diversity</li>
+<li>Closer to nature</li>
+<li>Visions of utopia</li>
+<li>Historical inspiration</li>
+<li>Carbon capturing</li>
+<li>Microplastic harvesting</li>
+<li>Post-collapse optimism</li>
+<li>Decentralisation</li>
+<li>Rythms of life</li>
+<li>DIY</li>
+<li>Reforestation</li>
+<li>Something very different</li>
+<li>Breath</li>
+<li>Decreasing energy consumption</li>
+<li>Master over emissary</li>
+<li>Mysticism</li>
+<li>Altered states</li>
+<li>Faith</li>
+<li>Epistemic humility</li>
+<li>Humility</li>
+<li>Open borders</li>
+<li>Global responsibility</li>
+<li>Responsibility</li>
+<li>Healing the water, the earth, the air</li>
+<li>Wise wielding of power</li>
+<li>Situationism</li>
+<li>Reimagining cities, villages, infrastructure</li>
+<li>Resilience</li>
+<li>Salvaging the ruins</li>
+<li>Fungi (svamp, slutet på John Cages Indeterminacy)</li>
+<li>Biomimicry</li>
+<li>Avant-garde</li>
+<li>Bullshit intolerance</li>
+<li>Merrymaking</li>
+<li>Grief</li>
+<li>Technology</li>
+<li>Fire</li>
+<li>Resistance</li>
+<li>Non-violence</li>
+<li>Leadership</li>
+<li>Spontaneity</li>
+<li>Practice</li>
+<li>Honesty</li>
+<li>Contemplation</li>
+<li>Quit your job</li>
+<li>Let it rot</li>
+<li>Patience</li>
+<li>High-touch altruism</li>
+<li>Everything misses the point</li>
+<li>Language</li>
+<li>Impermanence</li>
+<li>Change</li>
+<li>Destruction</li>
+<li>Snap out of it</li>
+<li>Learn to live on lentils</li>
+<li>Revitalising the countryside</li>
+<li>Urban agriculture</li>
+<li>Swaying seagrass meadows</li>
+<li>Hospicing Modernity</li>
+<li>Composting the wonders of humanity</li>
+<li>Beginner's mind</li>
+<li>Sourdough</li>
+<li>Cyberpunk</li>
+<li>Materialism</li>
+<li>Alternative economics</li>
+<li>The Light Triad</li>
+<li>The world is much larger than we can imagine</li>
+<li>Reason</li>
+<li>The Hermetic principles</li>
+<li>Fika</li>
+<li>Duality of non-duality</li>
+<li>Understanding animals and nature</li>
+<li>Post-complexity simplicity</li>
+<li>Universality classes</li>
+<li>Master over the emissary</li>
+<li>Mind training</li>
+<li>Small is beautiful</li>
+<li>Non-doing</li>
 </ol></body></html>
