--- a/predicaments/Poisoning the water, the earth, the air.html
+++ b/predicaments/Poisoning the water, the earth, the air.html
@@ -13,7 +13,7 @@ I smell it in the air.<br>
 Much that once was is lost,<br>
 For none now live who remember it.</p>
 <cite>J.R.R. Tolkien, The Lord of the Rings</cite>
-</blockquote><p><strong>We might, with full understanding of our actions, willingly, have poisoned the water, the earth, and the air to the extent that it might never again be the same</strong>. Even the consequences of the most benevolent large-scale actions might pale in comparison with the life span of certain anthropogenic chemicals, fossils of our stupidity, more common than grains of the sand in the empty desert of the potential future we mustn't choose. Can we become healers utilising the same genius that created the poisons to instead spread cures?</p><p>Connections:</p><ul>
+</blockquote><p><strong>We might, with full understanding of our actions, willingly, have poisoned the water, the earth, and the air to the extent that it might never again be the same</strong>. Even the consequences of the most benevolent large-scale actions might pale in comparison with the life span of certain anthropogenic chemicals, fossils of our stupidity, more common than grains of sand in the empty desert of the potential future we mustn't choose. Can we become healers utilising the same genius that created the poisons to instead spread cures?</p><p>Connections:</p><ul>
 <li><a data-href="Lack of attentiveness" href="Lack of attentiveness.html">Lack of attentiveness</a></li>
 <li><a data-href="The desacration of all places" href="The desacration of all places.html">The desacration of all places</a></li>
 <li><a data-href="Ignorance of everything being sacred" href="Ignorance of everything being sacred.html">Ignorance of everything being sacred</a></li>
