--- a/predicaments/Obesity.html
+++ b/predicaments/Obesity.html
@@ -4,7 +4,7 @@
 			<link rel="stylesheet" href="../css/styles.css">
 			</head>
 			<h2>Obesity</h2>
-			<p>In Europe, the UK, and the US between 25 and 38% of the population is obese. This is utterly stupid and the fact that we seem unable to positively affect this goes to show, if nothing else, how indifferent our welfare systems are of welfare. Obesity, in the case of the percentages above, is defined as having a BMI of over 30. BMI can be a problematic index but it tends to work quite well on large populations. If instead of looking only at obesity we include overweight (BMI &gt; 25) we find, for the same regions, that more than 60% of the population is overweight or obese. <strong>Fast expensive cars filled with slow poor fat people, what a time to be alive.</strong></p>
+			<p>In Europe, the UK, and the US between 25 and 38% of the population is obese. This is utterly stupid and the fact that we seem unable to positively affect this goes to show, if nothing else, how indifferent our welfare systems are to welfare. Obesity, in the case of the percentages above, is defined as having a BMI of over 30. BMI can be a problematic index but it tends to work quite well on large populations. If instead of looking only at obesity we include overweight (BMI &gt; 25) we find, for the same regions, that more than 60% of the population is overweight or obese. <strong>Fast expensive cars filled with slow poor fat people, what a time to be alive.</strong></p>
 <p>Connections:</p><ul>
 <li><a data-href="Malnutrition" href="Malnutrition.html">Malnutrition</a></li>
 <li><a data-href="Mental health" href="Mental health.html">Mental health</a></li>
