--- a/predicaments/Sex and sexuality.html
+++ b/predicaments/Sex and sexuality.html
@@ -7,7 +7,7 @@
 </head>
 <h2>Sex and sexuality</h2>
 <blockquote>
-<p><a data-tooltip-position="top" aria-label="https://bloodknife.com/everyone-beautiful-no-one-horny/" class="external-link" href="../https://bloodknife.com/everyone-beautiful-no-one-horny/" target="_blank">Everyone is beautiful and no one is horny</a>.</p>
+<p><a data-tooltip-position="top" aria-label="https://bloodknife.com/everyone-beautiful-no-one-horny/" class="external-link" href="https://bloodknife.com/everyone-beautiful-no-one-horny/" target="_blank">Everyone is beautiful and no one is horny</a>.</p>
 <cite>R.S. Benedict</cite>
 </blockquote><p><strong>Sex and sexuality have become both increasingly free and increasingly complicated</strong>, especially for young people and maybe even more so with the ease of access to intentional and unintentional pornography in all media.</p><p>Connections:</p><ul>
 <li><a data-href="Addiction" href="../Addiction.html">Addiction</a></li>
