Add link motivations to Climate Change

--- a/predicaments/Climate change.html
+++ b/predicaments/Climate change.html
@@ -12,94 +12,37 @@
 <p>Men argue. Nature acts.</p>
 <cite>Voltaire</cite>
 </blockquote><p>Connections:</p><ul>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Biodiversity loss" href="../Biodiversity loss.html">Biodiversity loss</a></li>
-<li><a data-href="Deforestation" href="../Deforestation.html">Deforestation</a></li>
-<li><a data-href="Desertification" href="../Desertification.html">Desertification</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Pollution" href="../Pollution.html">Pollution</a></li>
-<li><a data-href="Soil erosion" href="../Soil erosion.html">Soil erosion</a></li>
-<li><a data-href="Tipping points" href="../Tipping points.html">Tipping points</a></li>
-<li><a data-href="Microplastics" href="../Microplastics.html">Microplastics</a></li>
-<li><a data-href="Ocean acidification" href="../Ocean acidification.html">Ocean acidification</a></li>
-<li><a data-href="Planetary boundaries" href="../Planetary boundaries.html">Planetary boundaries</a></li>
-<li><a data-href="Loss of insect biomass" href="../Loss of insect biomass.html">Loss of insect biomass</a></li>
-<li><a data-href="Monocultures (agriculture)" href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></li>
-<li><a data-href="Agriculture" href="../Agriculture.html">Agriculture</a></li>
-<li><a data-href="Supply chain fragility" href="../Supply chain fragility">Supply chain fragility</a></li>
-<li><a data-href="Globalisation" href="../Globalisation.html">Globalisation</a></li>
-<li><a data-href="Energy" href="../Energy.html">Energy</a></li>
-<li><a data-href="Energy consumption increasing" href="../Energy consumption increasing.html">Energy consumption increasing</a></li>
-<li><a data-href="Ancient sunlight, old sunlight, current sunlight" href="../Ancient sunlight, old sunlight, current sunlight.html">Ancient sunlight, old sunlight, current sunlight</a></li>
-<li><a data-href="Ignored externalities" href="../Ignored externalities.html">Ignored externalities</a></li>
-<li><a data-href="Consumerism" href="../Consumerism.html">Consumerism</a></li>
-<li><a data-href="Growth" href="../Growth.html">Growth</a></li>
-<li><a data-href="Material extraction" href="../Material extraction.html">Material extraction</a></li>
-<li><a data-href="Cars" href="../Cars.html">Cars</a></li>
-<li><a data-href="Transportation infrastructure" href="../Transportation infrastructure.html">Transportation infrastructure</a></li>
-<li><a data-href="Public transport" href="../Public transport.html">Public transport</a></li>
-<li><a data-href="Travel" href="../Travel.html">Travel</a></li>
-<li><a data-href="Air travel" href="../Air travel.html">Air travel</a></li>
-<li><a data-href="Limits to growth" href="../Limits to growth.html">Limits to growth</a></li>
-<li><a data-href="Biased evidence selection" href="../Biased evidence selection.html">Biased evidence selection</a></li>
-<li><a data-href="Naive progress narrative" href="../Naive progress narrative.html">Naive progress narrative</a></li>
-<li><a data-href="Over-reliance on technology" href="../Over-reliance on technology.html">Over-reliance on technology</a></li>
-<li><a data-href="Synthetic biology" href="../Synthetic biology.html">Synthetic biology</a></li>
-<li><a data-href="Naive techno-optimism" href="../Naive techno-optimism.html">Naive techno-optimism</a></li>
-<li><a data-href="Population growth" href="../Population growth.html">Population growth</a></li>
-<li><a data-href="Populations entering the 'middle class'" href="../Populations entering the 'middle class'.html">Populations entering the 'middle class'</a></li>
-<li><a data-href="Fear" href="../Fear.html">Fear</a></li>
-<li><a data-href="Slow change" href="../Slow change.html">Slow change</a></li>
-<li><a data-href="Poverty" href="../Poverty.html">Poverty</a></li>
-<li><a data-href="Breakdown of information infrastructure" href="../Breakdown of information infrastructure.html">Breakdown of information infrastructure</a></li>
-<li><a data-href="Hemispherical asymmetry (Earth)" href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></li>
-<li><a data-href="Information isn't knowledge" href="../Information isn't knowledge.html">Information isn't knowledge</a></li>
-<li><a data-href="Skewed data" href="../Skewed data">Skewed data</a></li>
-<li><a data-href="Quantification" href="../Quantification.html">Quantification</a></li>
-<li><a data-href="Overreliance on data" href="../Overreliance on data">Overreliance on data</a></li>
-<li><a data-href="Carbon fundamentalism" href="../Carbon fundamentalism.html">Carbon fundamentalism</a></li>
-<li><a data-href="Multipolar traps" href="../Multipolar traps.html">Multipolar traps</a></li>
-<li><a data-href="Moloch" href="../Moloch.html">Moloch</a></li>
-<li><a data-href="Complexity mismatch" href="../Complexity mismatch.html">Complexity mismatch</a></li>
-<li><a data-href="Lack of agency" href="../Lack of agency.html">Lack of agency</a></li>
-<li><a data-href="Lack of systems thinking" href="../Lack of systems thinking.html">Lack of systems thinking</a></li>
-<li><a data-href="Lack of resilient systems" href="../Lack of resilient systems.html">Lack of resilient systems</a></li>
-<li><a data-href="Ineffective institutions" href="../Ineffective institutions.html">Ineffective institutions</a></li>
-<li><a data-href="Failure to take responsibility" href="../Failure to take responsibility.html">Failure to take responsibility</a></li>
-<li><a data-href="Greenwashing" href="../Greenwashing.html">Greenwashing</a></li>
-<li><a data-href="Sustainable growth" href="../Sustainable growth.html">Sustainable growth</a></li>
-<li><a data-href="Climate footprints" href="../Climate footprints.html">Climate footprints</a></li>
-<li><a data-href="Blaming the people" href="../Blaming the people.html">Blaming the people</a></li>
-<li><a data-href="Virtue signalling" href="../Virtue signalling.html">Virtue signalling</a></li>
-<li><a data-href="Car-centric design" href="../Car-centric design.html">Car-centric design</a></li>
-<li><a data-href="Lack of balance" href="../Lack of balance.html">Lack of balance</a></li>
-<li><a data-href="Wisdom crisis" href="../Wisdom crisis.html">Wisdom crisis</a></li>
-<li><a data-href="Lack of humility" href="../Lack of humility.html">Lack of humility</a></li>
-<li><a data-href="Unheeded warnings" href="../Unheeded warnings.html">Unheeded warnings</a></li>
-<li><a data-href="Ignorance of ongoing collapse" href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></li>
-<li><a data-href="Lack of a living world view" href="../Lack of a living world view.html">Lack of a living world view</a></li>
-<li><a data-href="Poisoning the water, the earth, the air" href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
-<li><a data-href="The desacration of all places" href="../The desacration of all places.html">The desacration of all places</a></li>
-<li><a data-href="Delusional domination of nature" href="../Delusional domination of nature.html">Delusional domination of nature</a></li>
-<li><a data-href="Story of separation" href="../Story of separation.html">Story of separation</a></li>
-<li><a data-href="Ignorance of interconnectedness" href="../Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></li>
-<li><a data-href="Despair" href="../Despair.html">Despair</a></li>
-<li><a data-href="Apathy" href="../Apathy.html">Apathy</a></li>
-<li><a data-href="Illusion of understanding" href="../Illusion of understanding.html">Illusion of understanding</a></li>
-<li><a data-href="Sense-making crisis" href="../Sense-making crisis.html">Sense-making crisis</a></li>
-<li><a data-href="Nothing is local" href="../Nothing is local.html">Nothing is local</a></li>
-<li><a data-href="Mental health" href="../Mental health.html">Mental health</a></li>
-<li><a data-href="Emotional crisis" href="../Emotional crisis.html">Emotional crisis</a></li>
-<li><a data-href="Immoral justifications" href="../Immoral justifications.html">Immoral justifications</a></li>
-<li><a data-href="Meat eating" href="../Meat eating.html">Meat eating</a></li>
-<li><a data-href="Industrial slaughter" href="../Industrial slaughter.html">Industrial slaughter</a></li>
-<li><a data-href="Mass climate migration" href="../Mass climate migration.html">Mass climate migration</a></li>
-<li><a data-href="Resource conflicts" href="../Resource conflicts.html">Resource conflicts</a></li>
-<li><a data-href="War" href="../War.html">War</a></li>
-<li><a data-href="Greed" href="../Greed.html">Greed</a></li>
-<li><a data-href="Evil" href="../Evil.html">Evil</a></li>
-<head>
-<link rel="stylesheet" href="../css/styles.css">
-<base target="_top">
-</head>
-<h2></h2>
+	<li><strong><a href="../Access to water.html">Access to water</a></strong> - The global warming from climate change results in potable water being more difficult for people to access.</li>
+	<li><strong><a href="../Agriculture.html">Agriculture</a></strong> - Farmers have always relied on the benevolence of the weather gods for their agricultural fortune. Their unfortune now lies in climate change's angering of these gods. </li>
+	<li><strong><a href="../Apathy.html">Apathy</a></strong> - When it is difficult to muster the energy to care for myself, how can I even begin to care about something as big as the climate of an entire planet? Global warming? Last winter felt pretty cold to me...  The massive planetary scale of some predicaments require from us an ability to see through our apathetic tendencies.</li>
+	<li><strong><a href="../Biodiversity loss.html">Biodiversity loss</a></strong> - The climate is always changing but the speed and magnitude of recent and current changes is not on an evolutionary timescale. No time to adapt means death.</li>
+	<li><strong><a href="../Carbon fundamentalism.html">Carbon fundamentalism</a></strong> - Climate change seems to us to be caused by an excess of CO<sub>2</sub> emissions. Reduce CO<sub>2</sub> emissions and we've solved climate change. Right?</li>
+	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - Climate change is a catastrophic risk and it is also, most unfortunately, through it being an increase in the energy trapped in the atmosphere, feeding into every other catastrophic risk we face. If we go extinct, it's gonna be hot.</li>
+	<li><strong><a href="../Climate footprints.html">Climate footprints</a></strong> - Hang on a minute... If people truly cared about the climate <em>they</em> should be the ones who do something about it! Best regards /The oil industry</li>
+	<li><strong><a href="../Democracy failing.html">Democracy failing</a></strong> - What do you think happens when the AC gets shut off in a room full of politicians?</li>
+	<li><strong><a href="../Desertification.html">Desertification</a></strong> - When global temperatures rise it definitely appears to be a bull market for camels.</li>
+	<li><strong><a href="../Despair.html">Despair</a></strong> - How can we even begin to affect something as large as climate change?</li>
+	<li><strong><a href="../Ecological crisis.html">Ecological crisis</a></strong> - Climate change is a threat to the entire planet and to everything on it. It is a threat to the only <em>home</em> we have.</li>
+	<li><strong><a href="../Energy.html">Energy</a></strong> - Climate change and global warming is an increase in the energy trapped in our atmosphere. It is, however, more or less useless energy in the form of heat. </li>
+	<li><strong><a href="../Extreme weather.html">Extreme weather</a></strong> - Climate change makes everything more volatile and unstable. There will be simultaneous floods and droughts, hurricanes and deafening silence, extremes becoming more extreme.</li>
+	<li><strong><a href="../Greenwashing.html">Greenwashing</a></strong> - If our customers care about climate change and we <em>appear</em> to care as well... That's genius, Zachary!</li>
+	<li><strong><a href="../Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></strong> - It is difficult for the global North (or West) to care about climate change, something that mainly seems to make life more difficult for dark-skinned people somewhere else. Climate change further increases the asymmetry of the view most of modernity has of the planet.</li> 
+	<li><strong><a href="../Immoral justifications.html">Immoral justifications</a></strong> - How does one justify the fact that one's actions and decisions, naively seen as harmless, push us ever closer towards the brink?</li>
+	<li><strong><a href="../Lack of agency.html">Lack of agency</a></strong> - I'm just one person... There can't possibly be anything I can do about climate change? I'm no magician.</li>
+	<li><strong><a href="../Lack of faith in anything.html">Lack of faith in anything</a></strong> - There is nothing we can do, there is no future, nothing will save us.</li>
+	<li><strong><a href="../Lack of purpose.html">Lack of purpose</a></strong> - When climate change narrows the future it becomes near impossible to imagine one's life to have any purpose. </li>
+	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - We don't have the time we need to tackle this challenge. However, when we did, we still didn't. Rest assured, the time needed is not duration, eternity lies in the present.</li>
+	<li><strong><a href="../Loss of insect biomass.html">Loss of insect biomass</a></strong> - There will be no bugs on the windscreen of the vehicle of modernity as it accelerates towards the edge of destruction.</li>
+	<li><strong><a href="../Mass climate migration.html">Mass climate migration</a></strong> - As the planet warms, people will move to the places that better support human life.</li>
+	<li><strong><a href="../Mental health.html">Mental health</a></strong> - Climate anxiety is real and, further, we will never truly understand the depth of the effects climate change has had, can have, and will have on the minds and hearts of people.</li>
+	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - Not sure what to say here. I think extinction could be seen as a form of mistreatment, I guess. Sounds a bit mild. </li>
+	<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - That's just it. Other humans. Not us, surely?</li>
+	<li><strong><a href="../Moloch.html">Moloch</a></strong> - Moloch grins as the birdless sky hisses.</li>
+	<li><strong><a href="../Pandemics.html">Pandemics</a></strong> - <a href="https://www.nature.com/articles/s41586-022-04788-w.epdf?sharing_token=kgCGmv6ft8tFH_JkcGnl0tRgN0jAjWel9jnR3ZoTv0MTRFYOnwGNRdF0uhePGjO9DWhFcpAec84Ol_vWlKhIVLldhPpxnkRGdg6ohAFlFK-UFj3HVCH_joJ1L9IYR7EobcXrwIdHVzkBi-S0C7M3NYxXvA7-E1eqTgnjsZi7p0JA20G2Xem6MGsQ-B2wcaqd4reh2YsnBitlgSEPqb9zXC5b84GrJ8mTL5495ASEHekdMtv5c947aC-BQ-RruGC-ZWSenPoSxTerH-SLlAgmNOWStQ7U2n33V4SZR4675b6z1c8cG3E7ak2HMoclvI3PfApZqW0qoKX6zctZRTdwJQ%3D%3D&tracking_referrer=www.theguardian.com">"Climate change is exacerbating this problem by helping circulate disease between species that previously did not encounter each other. The study forecast the geographic range shifts of 3,139 mammal species due to climatic and land use changes until 2070 and found that even under a relatively low level of global heating there will be at least 15,000 cross-species transmission events of one or more viruses during this time."</a></li>
+	<li><strong><a href="../Resource conflicts.html">Resource conflicts</a></strong> - Climate change affects where and how resources can be accessed, for example in places that used to be covered in ice, leading to different entities fighting over rights to particular resources.</li>
+	<li><strong><a href="../Soil erosion.html">Soil erosion</a></strong> - Generally, when it gets warmer it gets drier, <a href="https://www.sciencedirect.com/science/article/pii/S0012825222000058">when it gets drier we see an increase in soil erosion</a>.</li>
+	<li><strong><a href="../Spiritual metacrisis.html">Spiritual metacrisis</a></strong> - What happens to other realms and dimensions, being and existing, spirits and gods, when the climate changes?</li>
+	<li><strong><a href="../Suicide.html">Suicide</a></strong> - <a href="https://www.nature.com/articles/s41558-018-0222-x">"We project that unmitigated climate change (RCP8.5) could result in a combined 9–40 thousand additional suicides (95% confidence interval) across the United States and Mexico by 2050, representing a change in suicide rates comparable to the estimated impact of economic recessions, suicide prevention programmes or gun restriction laws."</a></li>
+	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - Anthropogenic climate change means the potential desacration of everything alive. And everything is alive.</li>
+	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - Add energy to any reaction and it might reach a tipping point where it rapidly changes. Not only are there tipping points within climate change, global warming further increases the risk of us reaching other systemic tipping points.</li>
+</ul>
