Add breaks at end of Climate Change

--- a/predicaments/Climate change.html
+++ b/predicaments/Climate change.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html><head>
+<!DOCTYPE html> <html>
 		<title>Climate change</title>
 		
 <head>
@@ -46,3 +46,7 @@
 	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - Anthropogenic climate change means the potential desacration of everything alive. And everything is alive.</li>
 	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - Add energy to any reaction and it might reach a tipping point where it rapidly changes. Not only are there tipping points within climate change, global warming further increases the risk of us reaching other systemic tipping points.</li>
 </ul>
+<br>
+<br>
+</body>
+</html>
