Add update and small fixes

--- a/predicaments/Catastrophic risks.html
+++ b/predicaments/Catastrophic risks.html
@@ -19,4 +19,5 @@
 <li><a data-href="Synthetic biology" href="../Synthetic biology.html">Synthetic biology</a></li>
 <li><a data-href="Poisoning the water, the earth, the air" href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
 <li><a data-href="Pandemics" href="../Pandemics.html">Pandemics</a></li>
-<li><a data-href="Nuclear war" href="../Nuclear war.html">Nuclear war</li></ul></body></html>
+<li><a data-href="Nuclear war" href="../Nuclear war.html">Nuclear war</li>
+</ul></body></html>
