--- a/predicaments/The Predicament Landscape.html
+++ b/predicaments/The Predicament Landscape.html
@@ -57,7 +57,7 @@ Do you disagree with something? Do you think something is blatantly wrong or del
 I am no one and, in John Cage's words, I have nothing to say and I am saying it and that is poetry as I need it. I'm just trying to channel and synthesise what others are saying and maybe spice it up a bit. Don't worry about who I am, it matters not. But again, it also does. I'm just a normal guy. Read into that what you must.</p>
 
 <p><strong>Note: Opinions</strong><br>
-Maybe everything I've ever written is just a hyperrationalisation of why I like what I like. Yeah, I really love riding bikes, I always have. I like old buildings and jazz more than new buildings and pop. I happen to really fucking loathe the workings of modernity and the bullshit-spewing morons it creates. Just my opinions though. I guess I'm just lucky in that all my opinions happen to also be correct. Strange how that happens.</p>
+Maybe everything I've ever written is just a hyperrationalisation of why I like what I like. Yeah, I really love riding bikes, I always have. I like old buildings and jazz more than new buildings and pop. I happen to really fucking loathe the workings of modernity and the bullshit-spewing morons it makes of us. Just my opinions though. I guess I'm just lucky in that all my opinions happen to also be correct. Strange how that happens.</p>
 
 <p><strong>Note: Missing Predicaments</strong><br>
 These predicaments are arbitrary points in a continuous landscape of predicaments. In other words, I could've picked 250 completely different predicaments. However, I believe this isn't that important. </p>
