Remove sketch image

--- a/predicaments/updates.html
+++ b/predicaments/updates.html
@@ -6,8 +6,7 @@
 <title>Updates</title>
 <h2>Updates</h2>
 <h3>2024-08-26</h3>
-<p>Drawing has started and I'm currently sketching out predicaments with ink and lead. Fun!</p>
-<img src="/img/sketch.png">
+<p>Drawing has started and I'm currently sketching out predicaments with pencil and ink. Fun!</p>
 <h3>2024-08-22</h3>
 <p>Write link motivations for Climate Change and start drawing/illustrating the map for the part of the landscape named Ecological Metacrisis which contains: Climate change, Biodiversity loss, Desertification, Deforestation, Ecological crisis, Extreme weather, Lost of insect biomass, Microplastics, Soil erosion, Ocean acidification, Pollution, and Waste. Drawing will take a long time.</p>
 <h3>2024-08-19</h3>
