Add some quotes

--- a/predicaments/Biodiversity loss.html
+++ b/predicaments/Biodiversity loss.html
@@ -5,6 +5,10 @@
 <base target="_top">
 			</head>
 			<h2>Biodiversity loss</h2>
+			<blockquote>
+				<p>From that time forth he believed that the wise man is one who never sets himself apart from other living things, whether they have speech or not, and in later years he strove long to learn what can be learned, in silence, from the eyes of animals, the flight of birds, the great slow gestures of trees.</p>
+				<cite>Ursula K. Le Guin, A Wizard of Earthsea</cite>
+				</blockquote>
 			<p>Biodiversity is often defined as &quot;the totality of genes, species, and ecosystems of a region&quot;. Another definition might be <em>variety of life</em>. Biodiversity loss could therefore be seen as a <strong>reduction in the variety of life</strong>.</p>
 <p>Biodiversity loss can include the decrease, disappearance, or extinction of a species in a specific area or globally. The current primary driver of biodiversity loss appears to be habitat destruction (mainly for agriculture), which includes deforestation, as well as climate change more generally. <a href="https://en.wikipedia.org/wiki/Biodiversity_loss">The current rate of global biodiversity loss is estimated to be 100 to 1000 higher than the naturally occurring rate which is faster than at any other time in human history</a>.</p>
 <p>The ongoing biodiversity loss is sometimes called the holocene extinction.</p>
