--- a/predicaments/Breakdown of information infrastructure.html
+++ b/predicaments/Breakdown of information infrastructure.html
@@ -5,6 +5,11 @@
 <base target="_top">
 			</head>
 			<h2>Breakdown of information infrastructure</h2>
+			<blockquote>
+				<p>If you are unable to find the truth right where you are, where else do you expect to find it?</p>
+				<cite>Dogen Zenji</cite>
+				</blockquote>
+			
 			<p>The algorithmic recommendation systems of the internet in general and social media in particular is leading to a breakdown in information infrastructure, <strong>hindering the flow of truthful information</strong> in favour of whatever stirs emotion and increases engagement and retention. Modern informational systems rely on capturing and holding attention in order to stay financially competitive. These incentives are detrimental to our information infrastructures. Further, the way we gather information about the world has failed to keep up with modernity&#39;s exponential increase in complexity.</p>
 
 <p><strong>Connections:</strong></p><ul>
