--- a/predicaments/Catastrophic risks.html
+++ b/predicaments/Catastrophic risks.html
@@ -6,6 +6,10 @@
 <base target="_top">
 </head>
 <h2>Catastrophic risks</h2>
+<blockquote>
+<p>But it is one thing to read about dragons and another to meet them.</p>
+<cite>Ursula K. Le Guin, A Wizard of Earthsea</cite>
+</blockquote>
 <p><strong>A global catastrophic risk or an existential risk is a hypothetical event that could destroy most or all of humanity</strong> and/or life on Earth. The majority of existing catastrophic risks are anthropogenic, the exceptions being things like asteroid impacts, volcano eruptions, gamma-ray bursts, and the like. Reasoning about catastrophic risks is challenging, the reason for this being that even if the probability of the event is miniscule its consequences are disastrous. Weighing minimal risk with infinitely bad outcome can lead to nonsensical conclusions.</p>
 <blockquote>
 <p>As technology is empowering our choices and we are getting something like the power of gods, you have to have something like the love and the wisdom of gods to wield that or you self-destruct.</p>
