--- a/predicaments/Dealing with death.html
+++ b/predicaments/Dealing with death.html
@@ -5,6 +5,10 @@
 <base target="_top">
 			</head>
 			<h2>Dealing with death</h2>
+			<blockquote>
+				<p>Only in silence the word, only in dark the light, only in dying life: bright the hawk's flight on the empty sky.</p>
+				<cite>Ursula K. Le Guin, A Wizard of Earthsea</cite>
+				</blockquote>
 			<p>Most cultures of modernity deal terribly with death. Maybe it is a part of reality that makes the artificial nature of our lives too clear for us. <strong>Death is a necessary part of life and the way we deal with death will reflect on how we deal with life</strong>. Once again, we have trouble with the broader view, complexity, infinity, and eternity. Do not put death under a cover, protecting us from its presence, for we are all dying anyway and in death&#39;s constructive destruction lies neogenesis.</p>
 			<p><strong>Connections:</strong></p><ul>
 <li><a data-href="Elderly care" href="../Elderly care.html">Elderly care</a></li>
