--- a/predicaments/Lack of love.html
+++ b/predicaments/Lack of love.html
@@ -15,7 +15,12 @@
 </blockquote><p>I feel more hesitant towards writing about this predicament than any of the others. I do not want to explain what love is, define it, pin it down. Nor do I really want to dig into the consequences of its absence. Call it what you will but everything within me senses a gravity to this predicament, a point of singularity in the landscape. <strong>The absence of love leaves us more blind than the absence of light</strong>. </p><blockquote>
 <p>Love is a striking example of how little reality means to us.</p>
 <cite>Marcel Proust</cite>
-</blockquote><p><strong>Connections:</strong></p><ul>
+</blockquote>
+<blockquote>
+<p>Although we say mountains belong to the country, actually, they belong to those that love them.</p>
+<cite>Dogen Zenji</cite>
+</blockquote>
+<p><strong>Connections:</strong></p><ul>
 <li><a data-href="Pollution" href="../Pollution.html">Pollution</a></li>
 <li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
 <li><a data-href="Deforestation" href="../Deforestation.html">Deforestation</a></li>
