--- a/predicaments/Mistreatment of other humans.html
+++ b/predicaments/Mistreatment of other humans.html
@@ -5,6 +5,10 @@
 <base target="_top">
 			</head>
 			<h2>Mistreatment of other humans</h2>
+			<blockquote>
+				<p>A fool sees himself as another, but a wise man sees others as himself.</p>
+				<cite>Dogen Zenji</cite>
+				</blockquote>
 			<p>Quite an obvious one, is it not? Although, I would claim that as a predicament this one points to two separate mistreatments of other humans. One is <strong>the deliberate and intentional mistreatment of humans</strong>, unrelated to what motivates said mistreatment. Killing, raping, enslaving, abusing, isolating, marginalising, excluding, etc. The other, more fickle, all-encompassing, and hidden is <strong>the global systemic mistreatment of other humans somehow unfit for the life of modernity</strong>. There exist no righteous, reasonable, or even acceptable motivations for the mistreatment of those who stand in the way of the stampede of modernity and, sadly, the more crippled, blind, and injured modernity becomes the less it cares about what it must trample to keep moving. </p>
 <p>The main issue with this predicament is that most of us don&#39;t recognise or acknowledge our complicity in the mistreatment of other humans. Why should we? Aren&#39;t we enlightened and good people? Well, no, sorry, it might be true for christmas presents but for most actions it is not the thought that counts.</p>
 <p><strong>Connections:</strong></p><ul>
